syntax = "proto3";

option csharp_namespace = "OrdersService.Protos";

package orders;

// -------------------------
// Order entity
// -------------------------
message Order {
  string id = 1;
  string customer_name = 2;
  string product = 3;
  int32 quantity = 4;
}

// -------------------------
// Common / Utility
// -------------------------
message Empty {}

// -------------------------
// Requests
// -------------------------
message GetOrderRequest {
  string id = 1;
}

message CreateOrderRequest {
  string customer_name = 1;
  string product = 2;
  int32 quantity = 3;
}

message DeleteOrderRequest {
  string id = 1;
}

// -------------------------
// Responses
// -------------------------
message GetOrderResponse {
  Order order = 1;
}

message GetAllOrdersResponse {
  repeated Order orders = 1;
}

message CreateOrderResponse {
  string id = 1;
}

message DeleteOrderResponse {
  bool isDeleted = 1;
}

// -------------------------
// gRPC Service
// -------------------------
service OrderService {
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc GetAllOrders (Empty) returns (GetAllOrdersResponse);
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
}
